Correct wrong package.json format

--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "sinon-chai": "^2.7.0"
   },
   "scripts": {
-    "test": "./node_modules/karma/bin/karma start --single-run --browsers PhantomJS",
+    "test": "./node_modules/karma/bin/karma start --single-run --browsers PhantomJS"
   },
   "repository": {
     "type": "git",
