--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "test": "test"
   },
   "dependencies": {
-    "leaflet": ""
+    "leaflet": "^0.7.7",
+    "jquery":"^2.1.4",
+    "underscore":"^1.8.3"
   },
   "devDependencies": {
     "chai": "^2.2.0",
